--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,11 @@
         android:onClick="onClickTwo"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="SCROLL"
+        android:onClick="onClickThree"
+        />
+
 </LinearLayout>
