--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppThemeFullScreen" parent="android:Theme.NoTitleBar">
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
 </resources>
