--- a/app/src/main/res/layout/activity_viewanimator.xml
+++ b/app/src/main/res/layout/activity_viewanimator.xml
@@ -21,4 +21,8 @@
         android:textSize="20sp"
         />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+
 </LinearLayout>
