lock screen something

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,12 @@
         android:onClick="onClickThree"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="LockScreen"
+        android:onClick="onClickFour"
+        />
+
+
 </LinearLayout>
