--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <declare-styleable name="SwipeableLayout">
+        <attr name="dragMaxWidth" format="dimension" />
+        <attr name="dragView" format="reference" />
+        <attr name="contentView" format="reference" />
+    </declare-styleable>
+
 </resources>
