--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,5 +33,12 @@
         android:onClick="onClickFour"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="INTERCEPT"
+        android:onClick="onClickFive"
+        />
+
 
 </LinearLayout>
